base/policies/custom/templates/no-owner-reference-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snoownerreference
spec:
  crd:
    spec:
      names:
        kind: K8sNoOwnerReference
      validation:
        openAPIV3Schema:
          properties: 
            parameters:
              properties:
                excludeNamespaces:
                  type: array
                  items:
                    type: string
                enforcementAction:
                  type: string
                  enum:
                  - dryrun
                  - warn
                  - deny
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snoownerreference

        violation[{"msg": msg}] {
          input.request.kind.kind == "Pod"
          input.request.object.metadata.namespace != input.parameters.excludeNamespaces[i]
          count(input.request.object.metadata.ownerReferences) == 0
          msg := "Pods should be created using controllers (Deployments, StatefulSets, etc.)"
        }

        violation[{"msg": msg}] {
          input.request.kind.kind == "Pod"
          count(input.request.object.metadata.ownerReferences) == 0
          not input.parameters.excludeNamespaces
          not contains(input.parameters.excludeNamespaces, input.request.object.metadata.namespace)
          msg := "Pods should be created using controllers (Deployments, StatefulSets, etc.)"
        }

        violation[{"msg": msg}] {
          input.request.kind.kind == "Pod"
          count(input.request.object.metadata.ownerReferences) == 0
          not contains(input.parameters.excludeNamespaces, input.request.object.metadata.namespace)
          msg := "Pods should be created using controllers (Deployments, StatefulSets, etc.)"
        }
